# allypdf

./: .gitignore  Cargo.toml  DEVLOG.md  README.md
src/: error.rs  lib.rs  util.rs
src/cmap/: cid.rs  mod.rs
src/cmap/cns_1/: b5pc.rs  cns_euc.rs  eten_b5.rs  etenms_b5.rs  hkscs_b5.rs  mod.rs  unicns_ucs2.rs  unicns_utf16.rs
src/cmap/gb_1/: gb_euc.rs  gbk2k.rs  gbk_euc.rs  gbkp_euc.rs  gbpc_euc.rs  unigb_ucs2.rs  unigb_utf16.rs
src/cmap/japan_1/: add_rksj.rs  euc.rs  ext_rksj.rs  h_v.rs  mod.rs  (+7 more)
src/cmaps/: cid.rs  cmap.rs  japan_1_2.rs  mod.rs
src/content/: parser.rs
src/document/: annotation.rs  beads.rs  document.rs  font.rs  mod.rs  page.rs  resources.rs
src/filter/: ascii_85_decode.rs  ascii_hex_decode.rs  ccitt_fax_decode.rs  crypt_decode.rs  dct_decode.rs  flate_decode.rs  jbig2_decode.rs  jpx_decode.rs  lzw_decode.rs  mod.rs  png_predict.rs  run_length_decode.rs
src/font/: adobe_glyph_list.rs  base_encodings.rs  cid_font.rs  cid_operator.rs  cid_parser.rs  cmap.rs  encoding.rs  font.rs  font_descriptor.rs  font_dictionary.rs  glyph_width.rs  mod.rs  true_type_font.rs  type_0_font.rs  type_1_font.rs  type_3_font.rs
src/operators/: color.rs  engine.rs  matrix.rs  mod.rs  operations.rs  operators.rs  parser.rs  path.rs  rect.rs
src/output/: html.rs  html_canvas.rs  mod.rs  output.rs
src/parser/: builder.rs  cid_parser.rs  date.rs  grouper.rs  lexer.rs  mod.rs  object.rs  parser.rs
src/render/: canvas.rs  mod.rs  page.rs  render.rs
test_data/: deep_traffic_header.txt  operators.py  pdf_flate.py  xref.txt
utils/: ascii.py  flate_decode.py
(+41 files in other folders)
