[package]
name = "pdfbox-rs"
version = "0.1.0"
authors = ["Dustin Newman <dustinnewman98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.22"
image = "0.23.14"
jpeg2000 = { git = "https://framagit.org/leoschwarz/jpeg2000-rust" }
ttf-parser = "0.15.0"